Add second recipe and link to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/milk-pudding.html">milk-pudding</a>
+    <ul>
+    <li><a href="recipes/milk-pudding.html">milk-pudding</a></li>
+    <li><a href="recipes/Bo-ham.html">Beef-stew</a></li>
+
+    </ul>
 </body>
 </html>
