--- a/recipes/milk-pudding.html
+++ b/recipes/milk-pudding.html
@@ -9,6 +9,24 @@
     <img src="../images/pudding.webp" alt="Milk pudding picture" height="310" width="290"
     <h4>Description</h4>
     <p> Milk pudding is a fun and delicious dessert at home! Milk pudding is super rich and soft; one bite and it melts into your mouth. You can also swap for coconut milk if you want a lactose-free alternative</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>Milk</li>
+        <li>Corn starch</li>
+        <li>Sugar</li>
+        <li>Shredded coconut</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li> Heat up one half of the milk</li>
+        <li> Put in sugar and mix when milk gets warm</li>
+        <li> Mix the other half with cornstarch</li>
+        <li> Slowly pour it into the pot and keep stirring until the milk turn into a thick consistency</li>
+        <li> Pour it into a container and let it rest till cool down</li>
+        <li> Cut to bite-size and coat them with shredded coconut</li>
+
+    </ol>
+    
 
 </body>
 </html>
